# sc-foundation-models

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: cluster_terms.csv  modality_dist.csv  model_family_dist.csv  papers_normalized.csv  task_dist.csv  timeline.csv
logs/: query_log.jsonl
manuscript/: manuscript.md
references/: references.bib
scripts/: push_to_github.py  run_pipeline.py
src/: __init__.py  bibliometrics.py  figures.py  ingest.py  normalize.py  schema.py  tables.py
supplementary/: CHANGELOG.md
tables/: suppl_table_s1_modality_breakdown.csv  table1_included_studies.csv  table2_model_taxonomy.csv  table3_benchmarks.csv  table4_reproducibility_audit.csv
tests/: test_bibliometrics.py  test_normalize.py  test_schema.py
