[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sc-foundation-models"
version = "1.0.0"
description = "Reproducible analysis package for scoping review of single-cell foundation models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.1",
    "rapidfuzz>=3.0.0",
    "umap-learn>=0.5.3",
    "plotly>=5.15.0",
    "pyarrow>=12.0.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "biopython>=1.81",
    "xmltodict>=0.13.0",
    "lxml>=4.9.0",
    "bibtexparser>=1.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "flake8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
